--- a/Landing-Zones/hub-sbc/hub-uks/pipeline/hub-uks.yml
+++ b/Landing-Zones/hub-sbc/hub-uks/pipeline/hub-uks.yml
@@ -1,63 +1,46 @@
+name: CI/CD Pipeline
 
-variables:
-  - name: location
-    value: "uksouth"
+# Triggers the workflow when pushing to the main branch with specific path filters
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'components/biceps/resourcegroup/**'
+      - 'components/biceps/routetable/**'
+      - 'components/biceps/virtualnetwork/**'
 
-  - name: serviceConnection
-    value: "test-hub-sbc"
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-  - name: subscriptionId
-    value: "41baf074-a44f-4d76-b28e-02692465da01"
+    # Define variables equivalent to Azure Pipeline variables
+    env:
+      location: "uksouth"
+      vmImageName: "ubuntu-20.04"
+      folderPath: "Landing-Zones/hub-sbc"
+      environmentName: "hub-uks"
+      artifactStorageAccountName: "artifactshubukssa001"
+      artifactStorageAccountRG: "artifact-hub-uks-rg-001"
+      artifactStorageAccountContainer: "artifactshubukscontainer001"
 
-  - name: vmImageName
-    value: "ubuntu-20.04"
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-  - name: folderPath
-    value: "Landing-Zones/hub-sbc"
+      # You need to call an external pipeline template (like in Azure Pipelines), here it can be another workflow call if available in the same repo or another repo.
+      # Since GitHub Actions does not have the same templating mechanism, we assume you reference a reusable workflow.
 
-  - name: environmentName
-    value: "hub-uks"
+      - name: Trigger reusable workflow (bicep-pipeline-templates)
+        uses: my-org/my-reusable-pipelines/.github/workflows/main.yml@main # Reference reusable workflow in another repo
+        with:
+          location: ${{ env.location }}
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          folderPath: "${{ env.folderPath }}/${{ env.environmentName }}"
+          environmentName: ${{ env.environmentName }}
+          fileName: "${{ env.environmentName }}.bicep"
+          vmImageName: ${{ env.vmImageName }}
+          artifactStorageAccountName: ${{ env.artifactStorageAccountName }}
+          artifactStorageAccountRG: ${{ env.artifactStorageAccountRG }}
+          artifactStorageAccountContainer: ${{ env.artifactStorageAccountContainer }}
 
-  - name: artifactStorageAccountName
-    value: "artifactshubukssa001"
-
-  - name: artifactStorageAccountRG
-    value: "artifact-hub-uks-rg-001"
-
-  - name: artifactStorageAccountContainer
-    value: "artifactshubukscontainer001"    
-
-trigger:
-  batch: true
-  branches:
-    include:
-    - main
-  paths:
-    include:
-    - components/biceps/resourcegroup
-    - components/biceps/routetable
-    - components/biceps/virtualnetwork
-
-resources:
-  repositories:
-    - repository: bicep-pipeline-templates
-      type: git
-      name: bicep-pipeline-templates
-      #ref: ${{ variables.pipelineVersion }}
-
-stages:
-
-  - template: /pipeline-templates/main.yml@bicep-pipeline-templates
-    parameters:
-      serviceConnection: ${{ variables.serviceConnection }}
-      location: ${{ variables.location }}
-      subscriptionId: ${{ variables.subscriptionId }}
-      folderPath: "${{ variables.folderPath }}/${{ variables.environmentName }}"
-      environmentName: ${{ variables.environmentName }}
-      fileName: "${{ variables.environmentName }}.bicep"
-      vmImageName: ${{ variables.vmImageName }}
-      artifactStorageAccountName: ${{ variables.artifactStorageAccountName }}
-      artifactStorageAccountRG: ${{ variables.artifactStorageAccountRG }}
-      artifactStorageAccountContainer: ${{ variables.artifactStorageAccountContainer}}
-      
- 
